# Parallel-Video-Object-Tracker

./: .gitignore  README.md
baseline_cpu/: Makefile  cpub.cpp
baseline_cpu_customize/: Makefile  cpu_ssd.cpp
baseline_cuda/: Makefile  cudab.cpp
baseline_cuda_customize/: Makefile  naive_cuda_tracker.cu  naive_cuda_tracker.exp  naive_cuda_tracker.lib
cache_video/: Makefile  cache_video.cpp
cpu_baseline/: Makefile  cpub.cpp  run_cpub.sh
tracker/: CMakeLists.txt  Makefile  run_tracker.sh  tracker.exp  tracker.lib
tracker/include/: baseline_kernel.hpp  utils.hpp
tracker/src/: baseline_kernel.cu  main.cpp  main_old.cpp  ncc_cpu.cpp
tracker_ghc/src/: baseline_kernel.cu
